// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input Component > matches snapshot when disabled 1`] = `
<div
  class="w-full"
>
  <input
    class="
            w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm 
            placeholder-gray-400 focus:outline-none focus:ring-2 
            focus:ring-blue-500 focus:border-blue-500
            disabled:bg-gray-50 disabled:text-gray-500
            
            undefined
          "
    disabled=""
  />
</div>
`;

exports[`Input Component > matches snapshot with default props 1`] = `
<div
  class="w-full"
>
  <input
    class="
            w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm 
            placeholder-gray-400 focus:outline-none focus:ring-2 
            focus:ring-blue-500 focus:border-blue-500
            disabled:bg-gray-50 disabled:text-gray-500
            
            undefined
          "
  />
</div>
`;

exports[`Input Component > matches snapshot with label and error 1`] = `
<div
  class="w-full"
>
  <label
    class="block text-sm font-medium text-gray-700 mb-1"
  >
    Test Label
  </label>
  <input
    class="
            w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm 
            placeholder-gray-400 focus:outline-none focus:ring-2 
            focus:ring-blue-500 focus:border-blue-500
            disabled:bg-gray-50 disabled:text-gray-500
            border-red-500 focus:ring-red-500 focus:border-red-500
            undefined
          "
  />
  <p
    class="mt-1 text-sm text-red-600"
    role="alert"
  >
    Test Error
  </p>
</div>
`;
